# aoc2020

./: .gitignore  Cargo.toml
src/: main.rs
src/day1/: input1_type.rs  mod.rs  part1.rs  part1_type.rs
src/day10/: part1.rs
src/day11/: part1.rs
src/day12/: input1  part1.rs
src/day2/: part1.rs
src/day3/: mod.rs  part1.rs
src/day4/: part1.rs
src/day5/: part1.rs
src/day6/: part1.rs
src/day7/: part1.rs
src/day8/: part1.rs
src/day9/: part1.rs
